[tool.poetry]
name = "flapi"
version = "0.1.0"
description = "Remotely control FL Studio using the MIDI Controller Scripting API"
authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
flapi = "flapi.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
fl-studio-api-stubs = ">=28.2.2"
mido = {extras = ["ports-rtmidi"], version = "^1.3.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
