[tool.poetry]
name = "flapi"
version = "1.0.0"
description = "Remotely control FL Studio using the MIDI Controller Scripting API"
authors = ["Miguel Guthridge <hello@miguelguthridge.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MiguelGuthridge/Flapi"

keywords = [
    "fl",
    "studio",
    "fl studio",
    "midi",
    "script",
    "midi controller scripting",
    "remote",
    "remote control",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Typing :: Typed",
]

include = ["py.typed"]


packages = [{ include = "flapi" }]

[tool.poetry.urls]
"Online Documentation" = "https://miguelguthridge.github.io/Flapi"
"Bug Tracker" = "https://github.com/MiguelGuthridge/Flapi/issues"

[tool.poetry.scripts]
flapi = "flapi.__main__:cli"

[tool.mypy]
exclude = ['flapi/server/*']

[tool.poetry.dependencies]
python = "^3.9"
fl-studio-api-stubs = ">=28.2.2"
mido = { extras = ["ports-rtmidi"], version = "^1.3.2" }
typing-extensions = "^4.9.0"
ipython = { version = "^8.18.1", optional = true }
click = "^8.1.7"
click-default-group = "^1.2.4"

[tool.poetry.extras]
ipython = ["ipython"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
